--- a/Pagina_Almacenes_Unison/templates/portal_intendencia.html
+++ b/Pagina_Almacenes_Unison/templates/portal_intendencia.html
@@ -11,6 +11,9 @@
     <a href="{% url 'lista_materiales' %}">
       <img src="{% static 'img/materiales.png' %}" alt="Materiales">
     </a>
+    <a href="{% url 'lista_reportes' %}" class="reportes">
+      <img src="{% static 'img/reportes.png' %}" alt="Reportes">
+    </a>
   </div>
 
 </body>
