--- a/Pagina_Almacenes_Unison/templates/materiales/ver_producto.html
+++ b/Pagina_Almacenes_Unison/templates/materiales/ver_producto.html
@@ -18,6 +18,9 @@
               <p><strong>Cantidad disponible:</strong> {{ material.cantidad }}</p>
               <p><strong>Descripcion del Producto:</strong> {{ material.descripcion }}</p>
               <p><strong>Origen del Producto:</strong> {{ material.get_Origen_display }}</p>
+              {% if material.unidades_o_paquetes %}
+              <p><strong>Unidades por paquete:</strong> {{ material.cantidad_por_paquete }}</p>
+              {% endif %}
               <img src="{{ material.imagen.url }}" alt="{{ material.nombre }}" class="img-thumbnail" width="100">
             </div>
             
