Update binary files in Git repository

--- a/Pagina_Almacenes_Unison/templates/materiales/lista_gastos.html
+++ b/Pagina_Almacenes_Unison/templates/materiales/lista_gastos.html
@@ -6,6 +6,7 @@
     {% if gastos %}
         {% for gasto in gastos %}
             <hr>
+            <p><b>id de gasto: </b>{{ gasto.pk }}</p>
             <p><b>Producto:</b> {{ gasto.producto }}</p>
             <p><b>Precio unitario:</b> {{ gasto.producto.precio_unitario }}</p>
             <p><b>Cantidad:</b> {{gasto.cantidad }} </p>
