--- a/Pagina_Almacenes_Unison/usuarios/templates/lista_usuario.html
+++ b/Pagina_Almacenes_Unison/usuarios/templates/lista_usuario.html
@@ -12,4 +12,6 @@
   </ul>
   
   <a href="{% url 'crear_usuario' %}">Crear Nuevo Usuario</a>
+  <a href="{% url 'portal_admin' %}" class="btn btn-info">Volver al portal</a>
+
 {% endblock %}
