--- a/Pagina_Almacenes_Unison/templates/materiales/informe_gastos_por_mes.html
+++ b/Pagina_Almacenes_Unison/templates/materiales/informe_gastos_por_mes.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Informe de Gastos por Día</title>
+    <title>Informe de Gastos por Mes</title>
 </head>
 <body>
-    <h1>Informe de Gastos por Día</h1>
+    <h1>Informe de Gastos por Mes</h1>
 
     <form method="get" action="{% url 'informe_gastos_por_mes' %}">
-        <label for="fecha">Seleccionar Fecha:</label>
-        <input type="date" id="fecha" name="fecha" value="{{ request.GET.fecha }}">
+        <label for="mes">Seleccionar Mes:</label>
+        <input type="month" id="mes" name="mes" value="{{ request.GET.mes }}">
         <button type="submit">Filtrar</button>
     </form>
 
     <table border="1">
         <thead>
             <tr>
-                <th>Informe</th>
                 <th>Producto</th>
                 <th>Precio Unitario</th>
                 <th>Cantidad</th>
@@ -27,24 +26,26 @@
             </tr>
         </thead>
         <tbody>
-            {% for informe, gastos in informes.items %}
-                {% for gasto in gastos %}
-                    <tr>
-                        {% if forloop.first %}
-                            <td rowspan="{{ gastos|length }}">{{ informe }}</td>
-                        {% endif %}
-                        <td>{{ gasto.producto }}</td>
-                        <td>{{ gasto.producto.precio_unitario }}</td>
-                        <td>{{ gasto.cantidad }}</td>
-                        <td>{{ gasto.gasto }}</td>
-                        <td>{{ gasto.fecha }}</td>
-                        <td>{{ gasto.id }}</td>
-                    </tr>
-                {% endfor %}
+            {% for gasto in informes %}
+                <tr>
+                    <td>{{ gasto.producto }}</td>
+                    <td>{{ gasto.producto.precio_unitario }}</td>
+                    <td>{{ gasto.cantidad }}</td>
+                    <td>{{ gasto.gasto }}</td>
+                    <td>{{ gasto.fecha }}</td>
+                    <td>{{ gasto.id }}</td>
+                </tr>
             {% endfor %}
         </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="2"></td>
+                <td>Total:</td>
+                <td>{{ total_gastos }}</td>
+            </tr>
+        </tfoot>
     </table>
-</body>
-<a href="{% url 'portal_admin' %}" class="btn btn-info">Volver al portal</a>
+    <a href="{% url 'portal_admin' %}" class="btn btn-info">Volver al portal</a>
 
+</body>
 </html>
