Fix formatting of price unit in templates

--- a/Pagina_Almacenes_Unison/templates/materiales/agregar_al_carrito.html
+++ b/Pagina_Almacenes_Unison/templates/materiales/agregar_al_carrito.html
@@ -13,7 +13,7 @@
     <ul>
       <li>Artículo: {{ material.nombre_articulo }}</li>
       <li>Cantidad Disponible: {{ material.cantidad }}</li>
-      <li>Precio Unitario: {{ material.precio_unitario }}</li>
+      <li>Precio Unitario: ${{ material.precio_unitario }}</li>
     </ul>
   </div>
 
